--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "extension-boilerplate",
-  "version": "0.0.2",
-  "description": "A template for creating cross-browser extensions",
+  "name": "GA Logger",
+  "version": "0.1.2",
+  "description": "Log Googla Analytics Events with peace.",
   "scripts": {
     "chrome-build": "TARGET=chrome gulp",
     "opera-build": "TARGET=opera gulp",
@@ -17,13 +17,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/EmailThis/extension-boilerplate"
+    "url": "https://github.com/pastelsky/google-analytics-logger-extension"
   },
-  "author": "Bharani <bharani91@gmail.com> (https://github.com/bharani91)",
-  "bugs": {
-    "url": "https://github.com/EmailThis/extension-boilerplate/issues"
-  },
-  "homepage": "https://www.emailthis.me/extension-boilerplate",
+  "author": "Shubham Kanodia <shubham.kanodia10@gmail.com> (https://github.com/pastelsky)",
   "devDependencies": {
     "babel-core": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
