Create a panel in chrome devtools
- Add devtools page in manifest
- Show the popup in devtools
- Remove redundant url permissions from manifest (https://stackoverflow.com/a/16096545)

--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,6 @@
     "tabs",
     "storage",
     "clipboardWrite",
-    "http://*/*",
-    "https://*/*",
     "webRequest",
     "<all_urls>"
   ],
@@ -29,7 +27,8 @@
     },
     "default_title": "GA Event Logger",
     "default_popup": "popup.html"
-  }
+  },
+  "devtools_page": "devtools.html"
 }
 
 
